<resources>
    <string name="app_name">aceuron</string>

    <string name="title_activity_notes_basic">ohman</string>

    <!-- Note related -->
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="notes">Notes</string>


    <!-- Do something -->
    <string name="add_note_button">Add note</string>
    <string name="delete_note_button">Delete note</string>
    <string name="homescreen_settings_button">Change your Home Screen</string>
    <string name="design_settings_button">Design</string>
    <string name="push_settings_button">Set Push authorization</string>


    <!-- Redirect-->
    <string name="schedule_button">Class\nSchedule</string>
    <string name="remind_button">Remind me</string>
    <string name="notes_button_conf">Notes\nconfidential</string>


    <!-- Other -->
    <string name="current_version">v0.1</string>
    <string name="title_activity_password">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
